--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nataki Tare | Home</title>
+<title>Bakul Catering | Home</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -46,10 +46,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="#page-top" class="page-scroll">Home</a></li>
         <li><a href="#about" class="page-scroll">About Us</a></li>
-        <li><a href="#LetsPy" class="page-scroll">Nataki Tare</a></li>
+        <li><a href="#LetsPy" class="page-scroll">Bakul Catering</a></li>
         <li><a href="#portfolio" class="page-scroll">Videos</a></li>
-        <li><a href="#testimonials" class="page-scroll">Photos</a></li>
-        <li><a href="#team" class="page-scroll">Sponsors</a></li>
+        <li><a href="#testimonials" class="page-scroll">Our Special</a></li>
+        <li><a href="#team" class="page-scroll">Events</a></li>
         <li><a href="#contact" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -65,8 +65,8 @@
           <div class="col-md-8 col-md-offset-2 intro-text">
 
 
-            <h1>Nataki Tare<span></span></h1>
-            <h2 class="sub-intro">We firmly believe <br>RISE IS EXPONENTIAL BY NATURE</h2>
+            <h1>Bakul Catering<span></span></h1>
+            <h2 class="sub-intro">We firmly believe <br>RISE IS EXPONENTIAL WITH NATURE</h2>
             <!-- <a href="#features" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div> -->
         </div>
       </div>
@@ -83,7 +83,7 @@
         <div class="about-text">
           <h2>About Us</h2>
           <p>
-            “Nataki Tare” is a organisation which is slowly becoming purpose of our lives. “Nataki Tare” is becoming home of creativity. we have future of film industry with us. we have film directors, writers, cinematographers, music directors, singers, editors, marketing team in our team. yes ! we believe we have incredible creative powers and efficient execution strength. We believe in concept of “Kalpavriksh” ! We are here to make content that really breathes cinema. we are certainly very clear about that and “no absurdity” is what we believe in. this is our mantra and we will never compromise on it at any cost. We have grown from grass root, performing street plays, theatre, college plays etc. we value your participation in helping us make a permanent home for artist where they can earn feel safe.
+            “Bakul Catering” is a organisation which is slowly becoming purpose of our lives. “Nataki Tare” is becoming home of creativity. we have future of film industry with us. we have film directors, writers, cinematographers, music directors, singers, editors, marketing team in our team. yes ! we believe we have incredible creative powers and efficient execution strength. We believe in concept of “Kalpavriksh” ! We are here to make content that really breathes cinema. we are certainly very clear about that and “no absurdity” is what we believe in. this is our mantra and we will never compromise on it at any cost. We have grown from grass root, performing street plays, theatre, college plays etc. we value your participation in helping us make a permanent home for artist where they can earn feel safe.
           </p>
         </div>
       </div>
@@ -98,15 +98,15 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <div class="Nataki Tare-text">
-            <h2>Nataki Tare</h2>
+            <h2>Bakul Catering</h2>
             <p>
-              <b>Submission deadline 31st March, 2020</b>
+              <b></b>
             </p>
-            <p>Filming is not just acting, its reaching, truely being in someone's soul </p>
+            <p>Eating is the necessity of nature & eatng good should be an habbit! </p>
               <p>
               <ul>
-                <li>Great mentors</li>
-                <li>Awesome activities</li>
+                <li>Great food!</li>
+                <li>Awesome offers!</li>
               </ul>
             </p>
             <p>
@@ -377,7 +377,7 @@
 <!-- Footer Section -->
 <div id="footer">
     <div class="container text-center">
-      <p><a href="#webdesign">Nataki Tare © 2019</a>
+      <p><a href="#webdesign">Bakul Catering</a>
     </p>
     </div>
   </div>
