--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 <div id="team" class="text-center">
   <div class="container">
     <div class="section-title">
-      <h2>Sponsors</h2>
+      <h2>Our Contributors</h2>
     </div>
     <div class="row">
       <div class="portfolio-items">
