--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="active"><a href="#page-top" class="page-scroll">Home</a></li>
         <li><a href="#about" class="page-scroll">About Us</a></li>
         <li><a href="#LetsPy" class="page-scroll">Bakul Catering</a></li>
-        <li><a href="#portfolio" class="page-scroll">Videos</a></li>
+        <li><a href="#portfolio" class="page-scroll">Our Clients</a></li>
         <li><a href="#testimonials" class="page-scroll">Our Special</a></li>
         <li><a href="#team" class="page-scroll">Events</a></li>
         <li><a href="#contact" class="page-scroll">Contact</a></li>
