--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="active"><a href="#page-top" class="page-scroll">Home</a></li>
         <li><a href="#about" class="page-scroll">About Us</a></li>
         <li><a href="#LetsPy" class="page-scroll">Bakul Catering</a></li>
-        <li><a href="#portfolio" class="page-scroll">Our Clients</a></li>
+        <li><a href="#portfolio" class="page-scroll">Videos</a></li>
         <li><a href="#testimonials" class="page-scroll">Our Special</a></li>
         <li><a href="#team" class="page-scroll">Events</a></li>
         <li><a href="#contact" class="page-scroll">Contact</a></li>
@@ -66,7 +66,7 @@
 
 
             <h1>Bakul Catering<span></span></h1>
-            <h2 class="sub-intro">We firmly believe <br>RISE IS EXPONENTIAL WITH NATURE</h2>
+            <h2 class="sub-intro">We firmly believe <br>RISE IS EXPONENTIAL WITH NATURAL</h2>
             <!-- <a href="#features" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div> -->
         </div>
       </div>
@@ -137,7 +137,15 @@
 <iframe width="374" height="255" src="https://www.youtube.com/embed/AW76LICOeYw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="374" height="255" src="https://www.youtube.com/embed/syjWCrTpO8o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="374" height="255" src="https://www.youtube.com/embed/q6qGsidLyKM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<iframe width="374" height="255" src="https://www.youtube.com/embed/gFYsF7sfO0Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/Oq_N9skG5ms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/wdBKI7T4lMw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/nUonQ7AkHCg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/Vma4SG_5D70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/Qp-B6TWzIcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/AGDzj18VFco" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/Do_vdVky5LU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="374" height="255" src="https://www.youtube.com/embed/sCTU1683PIs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
@@ -264,7 +272,7 @@
 <div id="team" class="text-center">
   <div class="container">
     <div class="section-title">
-      <h2>Our Contributors</h2>
+      <h2>Sponsors</h2>
     </div>
     <div class="row">
       <div class="portfolio-items">
@@ -335,11 +343,10 @@
         <div class="contact-item">
           <h3>Contact Info</h3>
             <p><span><i class="fa fa-map-marker"></i> Address</span>
-              Office P228 ,Mayur Trade Centre,
-              Opp chinchwad police,
-              Pimpri-Chinchwad,
-              Maharashtra 411019
-              </p>
+              3/14, Shree Niwas Building,<br>
+              Shivaji Nagar, Sai Chowk,<br>
+              Mulund Checknaka, Wagle Estate,<br>
+              Thane – 400604.</p>
            
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.201278660996!2d72.95148791490284!3d19.186409137024686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b90247dbfb41%3A0x7ecb052315a5f1f2!2sShivaji%20Nagar%2C%20Kisan%20Nagar%201%2C%20Thane%20West%2C%20Thane%2C%20Maharashtra%20400080!5e0!3m2!1sen!2sin!4v1576525203182!5m2!1sen!2sin" width="300" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         
@@ -348,7 +355,7 @@
           <p><span><i class="fa fa-phone"></i> Phone</span><a href="tel:+919702200360" style="color: #ffffff">+91-9702200360</a></p>
         </div>
         <div class="contact-item">
-          <p><span><i class="fa fa-envelope-o"></i> Email</span><a href = "mailto: bakulhs@gmail.com" style="color: #ffffff">natakitare@gmail.com</p>
+          <p><span><i class="fa fa-envelope-o"></i> Email</span><a href = "mailto: natakitare@gmail.com" style="color: #ffffff">natakitare@gmail.com</p>
         </div>
       </div>
       <div class="col-md-12">
