--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         <div class="cover_item"  >
             <div class="celebrating">
                 <center>
-                    <h1 id="demop" style="color:red;">
-                        Celebrated
-                        <a href="" id="enter" style="color:white;;font-weight: 700;"  class="typewrite" data-period="2000" data-type='[ "Technology", "Entertainment", "Design", "Ideas","Momentum" ]'>
+                    <h1 id="demop" style="color:black;">
+                        Catering
+                        <a href="" id="enter" style="color:Golden;;font-weight: 700;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinner", "Functions", "Partied","Events" ]'>
                             <span class="wrap"></span>
                         </a>
                     </h1>
