--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <span class="wrap"></span>
                         </a>
                     </h1>
-                    <h5 style="color:white">18<sup>th</sup> January, 2020 - Pune</h5>
+                    <h5 style="color:white"> Since 2000</h5>
                     <script>
                         var TxtType = function(el, toRotate, period) {
                             this.toRotate = toRotate;
