--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 <center>
                     <h1 id="demop" style="color:black;">
                         Catering
-                        <a href="" id="enter" style="color:Golden;;font-weight: 700;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinner", "Functions", "Partied","Events" ]'>
+                        <a href="" id="enter" style="color:Golden;;font-weight: 1200;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinner", "Functions", "Partied","Events" ]'>
                             <span class="wrap"></span>
                         </a>
                     </h1>
-                    <h5 style="color:white"> Since 2000</h5>
+                    <h5 style="color:black"> Since 2000</h5>
                     <script>
                         var TxtType = function(el, toRotate, period) {
                             this.toRotate = toRotate;
