--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
             <h1>Bakul Catering<span></span></h1>
-            <h2 class="sub-intro">We firmly believe <br>RISE IS EXPONENTIAL WITH NATURAL</h2>
+            <h2 class="sub-intro">taste matters</h2>
             <!-- <a href="#features" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div> -->
         </div>
       </div>
