--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet">
 
-</head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<!--</head>-->
+<!--<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
 
 <!-- Navigation-->
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -35,12 +35,7 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
       <a class="navbar-brand" href="#"><img src="img/output-onlinepngtools.png" class="brand-pic"></a> </div>
 
-
-
-
-
-
-
+    
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
