--- a/index.html
+++ b/index.html
@@ -274,71 +274,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active event">
-      <img src="photo/1.jpeg" class="img">
+      <img src="img/portfolio/1.jpeg.jpeg" class="img">
     </div>
 
     <div class="item event">
-      <img src="photo/2.jpeg"  class="img" >
+      <img src="img/portfolio/2.jpeg.jpeg"  class="img" >
     </div>
 
     <div class="item event">
-      <img src="photo/3.jpeg"  class="img" >
+      <img src="img/portfolio/1.jpeg.jpeg"  class="img" >
     </div>
 
     <div class="item event">
-      <img src="photo/4.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/5.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/6.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/7.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/8.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/9.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/10.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/11.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/12.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/13.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/14.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/15.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/16.jpeg"  class="img" >
-    </div>
-
-    <div class="item event">
-      <img src="photo/17.jpeg"  class="img" >
+      <img src="img/portfolio/1.jpeg.jpeg"  class="img" >
     </div>
 
   </div>
