--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="col-md-8 col-md-offset-2 intro-text">
 
 
-            <h1>Bakul Catering<span></span></h1>
+            <!--<h1>Bakul Catering<span></span></h1>-->
             <h2 class="sub-intro">
               
 <!--cover section slider -->
