--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <div class="cover_item"  >
             <div class="celebrating">
                 <center>
-                    <h1 id="demop" style="color:black;">
+                    <h1 id="demop" style="color:white;">
                         Catering
-                        <a href="" id="enter" style="color:Golden;;font-weight: 1200;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinner", "Functions", "Partied","Events" ]'>
+                        <a href="" id="enter" style="color:Golden;;font-weight: 1200;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinner", "Functions", "Parties","Events" ]'>
                             <span class="wrap"></span>
                         </a>
                     </h1>
