--- a/index.html
+++ b/index.html
@@ -306,21 +306,21 @@
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
             <div class="hover-bg">
-              <img src="img/S1.jpeg" class="img-responsive" alt="Cloud Study Jam"> </a> </div>
+              <img src="img/S1.jpeg.jpeg" class="img-responsive" alt="Bakul"> </a> </div>
           </div>
         </div>
 
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
             <div class="hover-bg">
-              <img src="img/S2.jpeg" class="img-responsive" alt="Cloud Study Jam"> </a> </div>
+              <img src="img/S2.jpeg.jpeg" class="img-responsive" alt="Bakul"> </a> </div>
           </div>
         </div>
 
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
             <div class="hover-bg">
-              <img src="img/S3.jpeg" class="img-responsive" alt="Cloud Study Jam"> </a> </div>
+              <img src="img/S3.jpeg.jpeg" class="img-responsive" alt="Bakul"> </a> </div>
           </div>
         </div>
 
