--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
             </div>
           </div>
           </div>
-        <div class="col-xs-12 col-md-6 letspic"> <img src="img/Final_Natki_Tare.png" class="img-responsive letspic" alt=""> </div>
+        <div class="col-xs-12 col-md-6 "> 
+                    <img src="img/Final_Natki_Tare_Circle.png" class="img-responsive" alt=""> </div>
+
+      </div>
       </div>
     </div>
   </div>
