added demo chabot

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet">
 
+<script async>(function(w, d) { w.CollectId = "5e7cecaa2747c84c13e964a3"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 <!--</head>-->
 <!--<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
 
@@ -34,7 +35,6 @@
       <a class="navbar-brand" href="#"><img src="img/logo.png" class="brand-pic"></a> </div>
 
     
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="active "><a id= "me1" href="#page-top" class="page-scroll">Home</a></li>
@@ -59,8 +59,7 @@
 
 
             <!--<h1>Bakul Catering<span></span></h1>-->
-            <h2 class="sub-intro">
-              
+<h2 class="sub-intro">
 <!--cover section slider -->
 <section id="home" class="home-cover">
     <div class="cover_slider owl-carousel owl-theme">
@@ -69,11 +68,11 @@
                 <center>
                     <h1 id="demop" style="color:white;">
                         Catering
-                        <a href="" id="enter" style="color:Golden;;font-weight: 1200;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinner", "Functions", "Parties","Events" ]'>
+                        <a href="" id="enter" style="color:Golden;;font-weight: 1200;"  class="typewrite" data-period="2000" data-type='[ "Weddings", "Corporate Dinners", "Functions", "Parties","Events" ]'>
                             <span class="wrap"></span>
                         </a>
                     </h1>
-                    <h5 style="color:black"> Since 2000</h5>
+                    <!-- <h5 style="color:black"> Since 2000</h5> -->
                     <script>
                         var TxtType = function(el, toRotate, period) {
                             this.toRotate = toRotate;
