--- a/corporate.html
+++ b/corporate.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="row button-row">
-                    <a href="" target="_blank" class="gallery-button">
+                    <a href="https://drive.google.com/drive/folders/1YY1_kqQpEOocqXAdShqywGPQErpA-_lB" target="_blank" class="gallery-button">
                         <button class="btn btn-custom btn-lg">View More</button>
                     </a>
                     <a href="index.html" class="gallery-button">
