--- a/wedding.html
+++ b/wedding.html
@@ -35,7 +35,7 @@
     <div id="gallery" class="text-center">
         <div class="container">
             <div class="section-title">
-                <h2>Wedding</h2>
+                <h2>Weddings</h2>
             </div>
             <div class="row">
                 <div class="gallery-item col-md-4">
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="row button-row">
-                    <a href="" target="_blank" class="gallery-button">
+                    <a href="https://drive.google.com/drive/folders/1GoeYH1BfZVPCIoTJQDYbzHyinKAxNMwF" target="_blank" class="gallery-button">
                         <button class="btn btn-custom btn-lg">View More</button>
                     </a>
                     <a href="index.html" class="gallery-button">
