--- a/corporate.html
+++ b/corporate.html
@@ -40,34 +40,39 @@
             </div>
             <div class="row">
                 <div class="gallery-item col-md-4">
-                    <img src="img/portfolio/1.jpeg" class="img-responsive">
+                    <img src="img/corporate/corporate (1).jpeg" class="img-responsive gallery-img">
                 </div>
                 <div class="gallery-item col-md-4">
-                    <img src="img/portfolio/1.jpeg" class="img-responsive">
+                    <img src="img/corporate/corporate (2).jpeg" class="img-responsive gallery-img">
                 </div>
                 <div class="gallery-item col-md-4">
-                    <img src="img/portfolio/1.jpeg" class="img-responsive">
-                </div>
-                <div class="gallery-item col-md-4">
-                    <img src="img/portfolio/1.jpeg" class="img-responsive">
-                </div>
-                <div class="gallery-item col-md-4">
-                    <img src="img/portfolio/1.jpeg" class="img-responsive">
-                </div>
-                <div class="gallery-item col-md-4">
-                    <img src="img/portfolio/1.jpeg" class="img-responsive">
+                    <img src="img/corporate/corporate (3).jpeg" class="img-responsive gallery-img">
                 </div>
             </div>
-            <div class="row button-row">
-                    <a href="https://drive.google.com/drive/folders/1YY1_kqQpEOocqXAdShqywGPQErpA-_lB" target="_blank" class="gallery-button">
-                        <button class="btn btn-custom btn-lg">View More</button>
-                    </a>
-                    <a href="index.html" class="gallery-button">
-                        <button class="btn btn-custom btn-lg">Go Back</button>
-                    </a>
+            <div class="row">
+                <div class="gallery-item col-md-4">
+                    <img src="img/corporate/corporate (4).jpeg" class="img-responsive gallery-img">
+                </div>
+                <div class="gallery-item col-md-4">
+                    <img src="img/corporate/corporate (5).jpeg" class="img-responsive gallery-img">
+                </div>
+                <div class="gallery-item col-md-4">
+                    <img src="img/corporate/corporate (6).jpeg" class="img-responsive gallery-img">
+                </div>
             </div>
-
         </div>
+        <div class="row button-row">
+            <a href="https://drive.google.com/drive/folders/1YY1_kqQpEOocqXAdShqywGPQErpA-_lB" target="_blank"
+                class="gallery-button">
+                <button class="btn btn-custom btn-lg">View More</button>
+            </a>
+            <a href="index.html" class="gallery-button">
+                <button class="btn btn-custom btn-lg">Go Back</button>
+            </a>
+        </div>
+
+    </div>
     </div>
 </body>
+
 </html>
