--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li class="active "><a id= "me1" href="#page-top" class="page-scroll">Home</a></li>
         <li class=""><a id= "me2" href="#about" class="page-scroll">About Us</a></li>
         <li class=""><a id= "me3" href="#LetsPy" class="page-scroll navElem">Bakul Catering</a></li>
-        <li class=""><a id= "me4" href="#portfolio" class="page-scroll navElem">Videos</a></li>
+        <!-- <li class=""><a id= "me4" href="#portfolio" class="page-scroll navElem">Videos</a></li> -->
         <li class=""><a id= "me5" href="#testimonials" class="page-scroll navElem">Our Special</a></li>
         <li class=""><a id= "me6" href="#team" class="page-scroll navElem">Events</a></li>
         <li class=""><a id= "me7" href="#contact" class="page-scroll navElem">Contact</a></li>
@@ -249,17 +249,17 @@
 
 
 <!-- Testimonials Section -->
-<section id="testimonials">
+<!-- <section id="testimonials">
   <div class="row">
   <div class="section-title">
     <h2>Photo Gallery</h2>
   </div>
-</div>
+</div> -->
 
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000"> -->
   <!-- Indicators -->
-  <ol class="carousel-indicators indicator">
+  <!-- <ol class="carousel-indicators indicator">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -278,10 +278,10 @@
     <li data-target="#myCarousel" data-slide-to="15"></li>
     <li data-target="#myCarousel" data-slide-to="16"></li>
 
-  </ol>
+  </ol> -->
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner">
+  <!-- <div class="carousel-inner">
     <div class="item active event">
       <img src="img/portfolio/1.jpeg.jpeg" class="img">
     </div>
@@ -298,17 +298,17 @@
       <img src="img/portfolio/1.jpeg.jpeg"  class="img" >
     </div>
 
-  </div>
+  </div> -->
 
   <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+  <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
     <span class="sr-only">Previous </span>
   </a>
   <a class="right carousel-control" href="#myCarousel" data-slide="next">
     <span class="sr-only">Next</span>
   </a>
 </div>
-</section>
+</section> -->
 
 
 <!-- Gallery Section -->
