--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 
 <!-- Stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet">
 
-<script async>(function(w, d) { w.CollectId = "5e7cecaa2747c84c13e964a3"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
-<!--</head>-->
+<script async>(function(w, d) { w.CollectId = "5e81de2b080ddb1058a71d05"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script><!--</head>-->
 <!--<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> -->
 
 <!-- Navigation-->
@@ -38,7 +36,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active "><a id= "me1" href="#page-top" class="page-scroll">Home</a></li>
         <li class=""><a id= "me2" href="#about" class="page-scroll">About Us</a></li>
-        <li class=""><a id= "me3" href="#LetsPy" class="page-scroll navElem">Bakul Catering</a></li>
+        <li class=""><a id= "me3" href="#buttons" class="page-scroll navElem">Photos</a></li>
         <!-- <li class=""><a id= "me4" href="#portfolio" class="page-scroll navElem">Videos</a></li> -->
         <li class=""><a id= "me5" href="#testimonials" class="page-scroll navElem">Our Special</a></li>
         <li class=""><a id= "me6" href="#team" class="page-scroll navElem">Events</a></li>
@@ -145,7 +143,7 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-6"> <img src="img/Final_Natki_Tare_Circle.png" class="img-responsive" alt=""> </div>
+      <div class="col-xs-12 col-md-6"> <img src="img/ntc.jpeg" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
           <h2>About Us</h2>
@@ -159,7 +157,7 @@
 </div>
 
 
-<!-- LetsPy section -->
+<!-- LetsPy section
 <div id="LetsPy">
   <div class="container">
     <div class="row">
@@ -191,7 +189,7 @@
     </div>
   </div>
 </div>
-</div>
+</div> -->
 
 
   <!-- button row section -->
@@ -405,9 +403,9 @@
           <div class="social">
             <ul>
 
-              <li><a href="https://www.instagram.com/natakitare/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="https://www.youtube.com/channel/UCHXIWgDGvxqysYouQCHJD3A" target="_blank"><i class="fa fa-youtube"></i></a></li>
-              <li><a href="https://www.facebook.com/Nataki-Tare-113922526680564/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="" target="_blank"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="" target="_blank"><i class="fa fa-facebook"></i></a></li>
 
             </ul>
           </div>
