--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active "><a id= "me1" href="#page-top" class="page-scroll">Home</a></li>
+        <li class="active "><a id= "me1" href="#header" class="page-scroll">Home</a></li>
         <li class=""><a id= "me2" href="#about" class="page-scroll">About Us</a></li>
         <li class=""><a id= "me3" href="#buttons" class="page-scroll navElem">Photos</a></li>
         <!-- <li class=""><a id= "me4" href="#portfolio" class="page-scroll navElem">Videos</a></li> -->
-        <li class=""><a id= "me5" href="#testimonials" class="page-scroll navElem">Our Special</a></li>
+        <li class=""><a id= "me5" href="#special" class="page-scroll navElem">Our Special</a></li>
         <li class=""><a id= "me6" href="#team" class="page-scroll navElem">Events</a></li>
         <li class=""><a id= "me7" href="#contact" class="page-scroll navElem">Contact</a></li>
       </ul>
@@ -143,7 +143,7 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-6"> <img src="img/ntc.jpeg" class="img-responsive" alt=""> </div>
+      <div class="col-xs-12 col-md-6"> <img src="img/logo1.png" class="img-responsive" alt=""> </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
           <h2>About Us</h2>
@@ -310,7 +310,7 @@
 
 
 <!-- Gallery Section -->
-<div id="team" class="text-center">
+<div id="special" class="text-center">
   <div class="container">
     <div class="section-title">
       <h2>Our Special</h2>
