--- a/corporate.html
+++ b/corporate.html
@@ -61,14 +61,24 @@
                 </div>
             </div>
             <div class="row button-row">
-                <div class="col-xs-6 gallery-button">
+                <div class="col-md-3 gallery-button">
                     <a href="https://drive.google.com/drive/folders/1YY1_kqQpEOocqXAdShqywGPQErpA-_lB" target="_blank" class="gallery-button">
                         <button class="btn btn-custom btn-lg">View More</button>
                     </a>
                 </div>
-                <div class="col-xs-6 gallery-button">
+                <div class="col-md-3 gallery-button">
                     <a href="index.html">
                         <button class="btn btn-custom btn-lg">Go Back</button>
+                    </a>
+                </div>
+                <div class="col-md-3 gallery-button">
+                    <a href="index.html#testimonials">
+                        <button class="btn btn-custom btn-lg">Testimonials</button>
+                    </a>
+                </div>
+                <div class="col-md-3 gallery-button">
+                    <a href="index.html#special">
+                        <button class="btn btn-custom btn-lg">Menu</button>
                     </a>
                 </div>
             </div>
