--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Aayushi's Infinite Carousel</title>
+    <title>Bakul Catering</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
