--- a/housewarming.html
+++ b/housewarming.html
@@ -69,6 +69,16 @@
                         <button class="btn btn-custom btn-lg">Go Back</button>
                     </a>
                 </div>
+                <div class="col-md-3 gallery-button">
+                    <a href="index.html#testimonials">
+                        <button class="btn btn-custom btn-lg">Testimonials</button>
+                    </a>
+                </div>
+                <div class="col-md-3 gallery-button">
+                    <a href="index.html#special">
+                        <button class="btn btn-custom btn-lg">Menu</button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
