--- a/event.html
+++ b/event.html
@@ -59,12 +59,12 @@
                 </div>
             </div>
             <div class="row button-row">
-                <div class="col-xs-6 gallery-button">
+                <div class="col-md-3 gallery-button">
                     <a href="https://drive.google.com/drive/folders/1HwwxXXdWjIZtrTsrXEJhebUJAUuTZYUw" target="_blank" class="gallery-button">
                         <button class="btn btn-custom btn-lg">View More</button>
                     </a>
                 </div>
-                <div class="col-xs-6 gallery-button thumbnail">
+                <div class="col-md-3 gallery-button thumbnail">
                     <a href="index.html">
                         <button class="btn btn-custom btn-lg">Go Back</button>
                     </a>
