--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                                 Catering
                                                 <a href="" id="enter" style="color:Golden;;font-weight: 1200;"
                                                     class="typewrite" data-period="2000"
-                                                    data-type='[ "Destination Weddings", "Corporate", "Birthdays", "Sports Days", "Cocktail Parties", "Housewarming", "Receptions" ]'>
+                                                    data-type='[ "Destination Weddings", "Corporate", "Birthdays", "Sports Days", "Cocktail Parties", "House Warming", "Receptions" ]'>
                                                     <span class="wrap"></span>
                                                 </a>
                                             </h1>
