--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Bakul Catering</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
